<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f4e4"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/fondo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_registro" />

    <ImageView
        android:id="@+id/logo_image_3"
        android:layout_width="408dp"
        android:layout_height="117dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/logo_image_3"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-1dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/box_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/box_user_name"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="192dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/box_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/box_last_name"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="247dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/box_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/box_email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/box_email"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="309dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/box_user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/box_password"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="364dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/box_re_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/box_re_password"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="420dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>